add href ownership verify script

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
       text-decoration: underline;
     }
   </style>
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="fLulfxW7BjQmLIxBN/XqAA" async></script>
 </head>
 <body>
   <header>
